--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -910,7 +910,7 @@ main{
     color:#333;
 }
 .post-content p code,.post-content li code{
-    color:#bf616a;
+    color:#008800;
     word-wrap:break-word;
     background:#f2f2f2;
     padding:.188rem .313rem;
@@ -949,6 +949,7 @@ main{
     }
 }
 .post-content h3{
+    color:#FF0000;
     font-size:1.25rem;
     line-height:1.4;
 }
@@ -1007,14 +1008,14 @@ main{
 }
 .post-content hr{
     width:auto;
-    max-width:47.5rem;
+    max-width:75rem;
     float:none;
     display:block;
     margin-right:auto;
     margin-left:auto;
     padding-left:0;
     padding-right:0;
-    border:1px solid #f2f2f2;
+    border:1px solid #c2c2c2;
     margin:50px auto
 }
 .post-content hr::after{
